fix(dp): align left ExpandableAnimatedToggle

--- a/site/ExpandableAnimatedToggle.scss
+++ b/site/ExpandableAnimatedToggle.scss
@@ -13,6 +13,7 @@
         background-color: transparent;
         border: none;
         cursor: pointer;
+        text-align: left;
     }
 
     h4 {
